export const snapshot = {};

snapshot[`Project List Command - Help Text 1`] = `
stdout:
"
Usage: list

Description:

  List projects

Options:

  -h, --help             - Show this help.                           
  --team       <team>    - Filter by team key                        
  --all-teams            - Show projects from all teams              
  --status     <status>  - Filter by status name                     
  -w, --web              - Open in web browser                       
  -a, --app              - Open in Linear.app                        
  -j, --json             - Output as JSON                            
  --no-pager             - Disable automatic paging for long output  

Examples:

  List all projects as JSON        linear project list --all-teams --json         
  List started projects for a team linear project list --team ENG --status started

"
stderr:
""
`;

snapshot[`Project List Command - JSON Validation Error 1`] = `
stdout:
'{
  "success": false,
  "error": {
    "type": "validation_error",
    "message": "Cannot use both --team and --all-teams flags",
    "suggestion": null,
    "context": "Failed to list projects"
  }
}
'
stderr:
""
`;

snapshot[`Project List Command - No Projects Found 1`] = `
stdout:
"No projects found.
"
stderr:
""
`;

snapshot[`Project List Command - No Projects Found JSON 1`] = `
stdout:
"[]
"
stderr:
""
`;

snapshot[`Project List Command - With JSON Output 1`] = `
stdout:
'[
  {
    "id": "project-json-1",
    "slugId": "json-proj",
    "name": "JSON Test Project",
    "description": "A project for JSON output",
    "status": {
      "id": "status-1",
      "name": "In Progress",
      "type": "started"
    },
    "lead": {
      "name": "test.user",
      "displayName": "Test User",
      "initials": "TU"
    },
    "teams": [
      "ENG"
    ],
    "priority": 2,
    "health": "onTrack",
    "startDate": "2024-01-15",
    "targetDate": "2024-03-30",
    "url": "https://linear.app/test/project/json-proj",
    "createdAt": "2024-01-10T10:00:00Z",
    "updatedAt": "2024-01-20T15:30:00Z"
  }
]
'
stderr:
""
`;
